Remove site-nav; fix intro on small screens

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -22,70 +22,6 @@
     }
 }
 
-.site-nav {
-    float: right;
-    line-height: 56px;
-
-    .menu-icon {
-        display: none;
-    }
-
-    .page-link {
-        color: $text-color;
-        line-height: $base-line-height;
-
-        // Gaps between nav items, but not on the first one
-        &:not(:first-child) {
-            margin-left: 20px;
-        }
-    }
-
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 30px;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
-
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
-            }
-        }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        .page-link {
-            display: block;
-            padding: 5px 10px;
-        }
-    }
-}
-
-
 
 /**
  * Site footer
@@ -248,17 +184,43 @@ hr {
   float: left;
   width: calc(100% - (#{$spacing-unit} / 2) - 200px - 20px);
   margin-right: 20px;
+
+  @include media-query($on-palm) {
+    float: none;
+    width: 100%;
+    margin-right: 0;
+  }
 }
 
 .me img {
   float: right;
   width: 200px;
+
+  @include media-query($on-palm) {
+    float: none;
+    width: auto;
+  }
 }
 
 .video {
   float: left;
-}
 
-.video.first {
-  margin-right: 20px;
+  &.first {
+    margin-right: 20px;
+  }
+
+  &.big {
+    width: calc(100% - (#{$spacing-unit} / 2));
+  }
+
+  &.small.one-point-six {
+    width: 320px;
+    height: calc(320px / 1.6);
+  }
+
+  @include media-query($on-small-screens) {
+    &.first {
+      margin-bottom: 20px;
+    }
+  }
 }
