--- a/css/main.scss
+++ b/css/main.scss
@@ -23,6 +23,7 @@ $grey-color-dark:  darken($grey-color, 25%);
 $white:            #ffffff;
 
 $on-palm:          600px;
+$on-small-screens: 720px;
 $on-laptop:        800px;
 
 
